# Manga_to_Anime

./: .gitignore  README.md  data_prep.ipynb  folder_structure.ipynb  pyproject.toml  req_libraries.txt
.ipynb_checkpoints/: data_prep-checkpoint.ipynb
kumiko/: kumikolib.py
kumiko/lib/: debug.py
