[tool.poetry]
name = "manga-to-anime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "manga_to_anime"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.6.0.66"
imageio = "^2.22.4"
pymediainfo = "^6.0.1"
ffmpeg-python = "^0.2.0"
ffmpeg = "^1.4"
decord = "^0.6.0"
av = "^10.0.0"
imagehash = "^4.3.1"
pandas = "^1.5.2"
graphviz = "^0.20.1"
matplotlib = "^3.6.2"
scikit-image = "^0.19.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
spatial = "^0.2.0"
annoy = "^1.17.1"
aiohttp = "^3.8.3"
mangadex = "^2.5.2"
pypng = "^0.20220715.0"
natsort = "^8.2.0"
tf2onnx = "^1.13.0"
onnx2pytorch = "^0.4.1"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
